# gint

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.gcc48  LICENSE  Makefile  README.md
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: breaking-change.md  bugfix.md  docs.md  feature.md  perf.md  refactor.md
.github/workflows/: ci.yml  fuzz.yml  performance.yml
bench/: RESULTS.md  benchmark_int256.cpp  compare_int128.cpp  compare_int256.cpp  compare_int256_bit.cpp  compare_int256_random.cpp  performance.cpp
cmake/: gintCompilerContract.cmake  gintConfig.cmake.in
docs/: BENCHMARKS.md  INTEGRATION.md  INTERNALS.md  README.md  RELEASING.md  SUPPORT.md  TECH_SPEC.md  UPGRADING.md  VALIDATION_ENVIRONMENTS.md
include/gint/: core.h  gint.h
scripts/: bootstrap-validation-env.sh  check-codegen-contract.sh  check-internal-headers.sh  check_codegen_contract.py  generate-amalgamation.py  run-differential.sh  run-fuzz.sh  run-gcc48-validation.sh  summarize_benchmarks.py
src/gint/: cleanup.hpp  cleanup_pass.hpp  configuration.hpp  configuration_pass.hpp  core.hpp  fmt.hpp  gint.hpp  integer.hpp  io.hpp  io_prelude.hpp  prelude.hpp  primitives.hpp  standard.hpp  string_stream.hpp
tests/: arithmetic_basic_test.cpp  arithmetic_divmod_test.cpp  arithmetic_mul_test.cpp  bitwise_test.cpp  boundary_test.cpp  comparison_test.cpp  compile_test.cpp  construction_test.cpp  conversion_test.cpp  divzero_dso_library.cpp  divzero_dso_loader_test.cpp  divzero_macro_enabled_tu.cpp  divzero_macro_isolation_test.cpp  divzero_macro_unchecked_tu.cpp  divzero_unchecked_test.cpp  exceptions_overflow_test.cpp  float_interop_edge_test.cpp  fmt_support_test.cpp  gcc_tuned_fastpaths_test.cpp  gint_test.cpp  hash_test.cpp  highest_bit_test.cpp  numeric_limits_test.cpp  property_test.cpp  shift_test.cpp  stream_test.cpp
tests/cmake/: check_cmake_compiler_contract.cmake  check_header_contract.cmake  check_installed_compiler_contract.cmake  run_consumer.cmake
tests/consumer/: check_internal_headers_script.sh  config_checked.cpp  config_gcc_tuned.cpp  config_isolation_main.cpp  config_unchecked.cpp  core_header.cpp  core_then_umbrella.cpp  core_then_umbrella_fmt.cpp  cxx23_werror.cpp  gcc48_compat.cpp  header_contract.cpp  internal_header_graph.cpp  internal_header_graph_checked.cpp  internal_header_graph_checked_no_exceptions.cpp  internal_header_graph_fmt.cpp  internal_header_graph_fmt_include_order.cpp  no_exceptions.cpp  odr_static_members.cpp  odr_static_members_other.cpp
tests/consumer/package/: CMakeLists.txt  main.cpp
tests/consumer/subproject/: CMakeLists.txt  main.cpp
tests/differential/: differential_test.cpp  oracle.h
tests/fuzz/: gint.dict  gint_fuzz.cpp
tests/fuzz/corpus/: division-full-width  division-small  float-rounding  parser-invalid-at  parser-invalid-backtick  parser-long
tests/perf/: codegen_contract.cpp  codegen_contract.json  test_codegen_contract.py  test_generate_amalgamation.py  test_summarize_benchmarks.py
